--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 
 <html lang="ar">
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>صفحة الألعاب</title>
+<title>juegos44</title>
 <style>
         @font-face {
             font-family: 'Bebas Neue';
@@ -250,7 +249,7 @@
 </head>
 <body>
 <header>
-<h1>GAMES4YOU</h1>
+<h1>Juegos44</h1>
 <div class="search-bar">
 <input placeholder="search" type="text"/>
 </div>
@@ -266,10 +265,10 @@
 <h3>Animal Crossing: Pocket Camp Complete</h3>
 <p>Clique here</p>
 </div>
-<div class="game-card" data-download-url="https://installchecker.com/cl/i/lk1xxd" id="game3" onclick="showModal(this)">
+<div class="game-card" data-download-url="https://installchecker.com/cl/i/g68p1d" id="game3" onclick="showModal(this)">
 <img alt="Game 3" src="https://i.ibb.co/ByPLXnJ/balatro-2-140x140.png"/>
 <h3>Balatro APK</h3>
-<p>Clique here</p>
+<p>Haz clic aquí</p>
 </div>
 <div class="game-card" data-download-url="https://installchecker.com/cl/i/g68dk2" onclick="showModal(this)">
 <img alt="Game 4" src="https://i.ibb.co/9cdZVXQ/unnamed.png"/>
