--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
 </div>
 </header>
 <div class="container">
-<div class="game-card" data-download-url="https://installchecker.com/cl/i/99jjxv" id="game1" onclick="showModal(this)">
-<img alt="Game 1" src="https://i.ibb.co/TmNLqFp/download-5.png"/>
-<h3>Sprunki (Andriod&IOS)</h3>
+<div class="game-card" data-download-url="https://installchecker.com/cl/i/j6m35k" id="game1" onclick="showModal(this)">
+<img alt="Game 1" src="https://i.ibb.co/tKSkndB/shadowfight2-iconwlogo.webp"/>
+<h3>Shadow Fight 2 (MOD, Titan Unlimited Money)</h3>
 <p>Clique here</p>
 </div>
 <div class="game-card" data-download-url="https://installchecker.com/cl/i/kl3jpg" id="game2" onclick="showModal(this)">
